Payment soap server URL and merchant ID added to environment variables.

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ AUTH_SERVER_ADDR =213.233.179.175
 AUTH_SERVER_PORT =4020
 MONGO_SERVER_ADDR =213.233.179.175
 MONGO_SERVER_PORT =27018
+PAYMENT_SERVER_URL='https://sandbox.zarinpal.com/pg/services/WebGate/wsdl'
+MERCHANT_ID='XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX'
