--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "soap": "^0.30.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
