--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,17 @@ services:
 
     account:
         image: memmojtaba/e-shopping-account_management:latest
-        volumes:
-            - "./.env:/account_management/.env"
+        # volumes:
+        #     - "./.env:/account_management/.env"
+        environment: 
+            - HOST=213.233.176.195
+            - PORT=5000
+            - AUTH_SERVER_ADDR=auth
+            - AUTH_SERVER_PORT=2000
+            - MONGO_SERVER_ADDR=mongo_account
+            - MONGO_SERVER_PORT=27017
+            - PAYMENT_SERVER_URL='https://sandbox.zarinpal.com/pg/services/WebGate/wsdl'
+            - MERCHANT_ID='XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX'
         ports:
             - "5000:5000"
         restart: always
