--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 
 services:
-    mongo:
+    db:
         image: mongo:latest
         ports:
             - "27017:27017"
@@ -14,14 +14,14 @@ services:
         restart: always
 
     auth:
-        image: sayid/auth:latest
+        image: sayid/authentiq:latest
         ports:
             - "4020:2000"
         restart: always
     #    links:
-    #        - mongo
+    #        - db
         depends_on:
-            - mongo
+            - db
 
     account:
         image: memmojtaba/e-shopping-account_management:latest
